--- a/css/home/home.css
+++ b/css/home/home.css
@@ -416,7 +416,7 @@ li {
   }
   .btn-mobile {
     display: flex;
-    margin-left: 25rem;
+    margin-left: auto;
 
     padding: 0.3rem 1rem;
     font-size: 1.8rem;
