--- a/css/workout/styles.css
+++ b/css/workout/styles.css
@@ -321,7 +321,7 @@ body {
   }
   .btn-mobile {
     display: flex;
-    margin-left: 25rem;
+    margin-left: auto;
 
     padding: 0.3rem 1rem;
     font-size: 1.8rem;
